force-app/main/default/objects/Call_Detail__c/fields/Call_From__c.field-meta.xml
<CustomField>
    <fullName>Call_From__c</fullName>
    <label>Call From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>