force-app/main/default/objects/Call_Detail__c/fields/Key_Topics__c.field-meta.xml
<CustomField>
    <fullName>Key_Topics__c</fullName>
    <label>Key Topics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>