force-app/main/default/objects/Call_Detail__c/fields/lead1__c.field-meta.xml
<CustomField>
    <fullName>lead1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Call Details</relationshipLabel>
    <relationshipName>Call_Details</relationshipName>
    <type>Lookup</type>
</CustomField>