force-app/main/default/objects/Call_Detail__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead (Master)</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Call Details (Master)</relationshipLabel>
    <relationshipName>Call_Details_Master</relationshipName>
    <type>Lookup</type>
</CustomField>