force-app/main/default/objects/Call_Detail__c/fields/Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit</label>
    <referenceTo>Site_Visit__c</referenceTo>
    <relationshipLabel>Call Details</relationshipLabel>
    <relationshipName>Call_Details</relationshipName>
    <type>Lookup</type>
</CustomField>