force-app/main/default/objects/Call_Detail__c/fields/Transcription__c.field-meta.xml
<CustomField>
    <fullName>Transcription__c</fullName>
    <label>Transcription</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>