force-app/main/default/objects/Call_Detail__c/fields/Transcription_Language__c.field-meta.xml
<CustomField>
    <fullName>Transcription_Language__c</fullName>
    <label>Transcription Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>